--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,7 @@ dependencies = [
     "openai>=2.2.0",
     "pillow>=10.0.0",
     "python-dotenv>=1.0.1",
+    "transformers>=4.30.0",
+    "torch>=2.0.0",
+    "scipy>=1.9.0",
 ]
